constraints/pod-security-policy-flexvolume-drivers-samples-psp-flexvolume-drivers-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPFlexVolumes
metadata: # kpt-merge: /psp-flexvolume-drivers
  name: psp-flexvolume-drivers
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowedFlexVolumes: #[]
      - driver: "example/lvm"
      - driver: "example/cifs"
